[build-system]
requires = [
    "pip>=26.1",
    "setuptools>=40.0",
    "setuptools_scm[toml]>=4.0,<11",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 120
extend-exclude = [
  "grafana_client/elements/__init__.py",
  "grafana_client/elements/_async/__init__.py",
]

[tool.ruff.lint]
select = [
    # Bandit
    "S",
    # eradicate
    "ERA",
    # flake8-2020
    "YTT",
    # isort
    "I",
    # print
    "T20",
    # Pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # return
    "RET",
    # pyupgrade
    # "UP",
    # flake8-commas
    "COM",
    # future-annotations
    # "FA",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH"
]
extend-ignore = [
    # Unnecessary `elif` after `return` or `raise` statement.
    "RET505",
    "RET506",
    # No trailing commas.
    "COM812"
]
unfixable = ["ERA", "F401", "F841", "T20", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["ERA001", "T201"]
"script/*" = ["S603", "S605", "S607", "T201"]
"test/*" = ["S101"]
"grafana_client/knowledge.py" = ["ERA001"]

[tool.pytest.ini_options]
addopts = """
  -ra -q --verbosity=3 --doctest-modules --keepalive
"""
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = [
  "grafana_client",
  "test",
]
xfail_strict = true
markers = [
  "integration",
]

[tool.coverage.run]
branch = false
source = ["grafana_client"]
omit = [
    # omit anything generated / mirror to sync code
    "grafana_client/elements/_async/*",
    # omit software tests
    "test/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_also = [
    "\\A(?s:.*# pragma: exclude file.*)\\Z",
]

# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]
format = [
  {cmd="script/generate_async.py format"},
  {cmd="ruff format"},
  {cmd="ruff check --fix"},
]
lint = [
  {cmd="script/generate_async.py check"},
  {cmd="ruff check"},
]
test = [
  {cmd="python -m unittest -vvv"},
  {cmd="python -m pytest -m integration"},
]
test-coverage = [
  {cmd="coverage erase"},
  {cmd="coverage run --append -m unittest discover -vvv"},
  {cmd="coverage run --append -m pytest -m integration"},
  {cmd="coverage xml"},
  {cmd="coverage report"},
]
build = {cmd="python -m build"}
check = ["lint", "test"]

release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*" },
]
