[metadata]
name = grafana-client
friendly_name = Grafana client
description = A client library for the Grafana HTTP API, written in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Andrew Prokhorenkov
author_email = andrew.prokhorenkov@gmail.com
copyright = Copyright 2017-2020 Andrew Prokhorenkov <andrew.prokhorenkov@gmail.com>
url = https://github.com/panodata/grafana-client/
project_urls =
    Source = https://github.com/panodata/grafana-client/
    Tracker = https://github.com/panodata/grafana-client/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = grafana http api grafana-client grafana-api automation

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm>=4.0

install_requires =
    requests>=2.23.0,<3

[options.extras_require]
test =
    codecov>=2.1.0
    coverage>=5.2.0
    unittest-xml-reporting>=3.0.0
    requests-mock>=1.8.0

[options.packages.find]
where = .
exclude = test

[bdist_wheel]
universal = true

[tool.setuptools_scm]
local_scheme = no-local-version
version_scheme = python-simplified-semver
write_to = grafana_client/version.py
